fix: fix controls position on safari

--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@
 body {
 	display: grid;
 	background: #777;
-	place-items: center;
 	margin: 0;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	-webkit-user-select: none;
@@ -62,7 +61,8 @@ body {
 #controls {
 	position: absolute;
 	z-index: 200;
-	place-self: start center;
+	left: 50%;
+	transform: translateX(-50%);
 	border-radius: 0 0 1em 1em;
 	background: var(--bg);
 
